==> ARMmbed/mbed-os/targets/TARGET_RENESAS/TARGET_RZ_A2XX/can_api.c <==
#include "mbed_assert.h"
#include "can_api.h"
#include "RZ_A2_Init.h"
#include "cmsis.h"
#include "PeripheralPins.h"
#include "iodefine.h"
#include "r_typedefs.h"
#include "mbed_drv_cfg.h"
#include "rza_io_regrw.h"
#include "iobitmask.h"
#include "r_can_rz_config.h"
#include "r_can_rz_if.h"
#define REG_32W                 RZA_IO_RegWrite_32
#define REG_NONSHIFT            IOREG_NONSHIFT_ACCESS
#define REG_NONMASK             IOREG_NONMASK_ACCESS
#define CHANNEL_MAX             MAX_CHANNELS
#define CAN_TX_RX               2
#define CAN_IRQ_TYPE_MAX        8
#define RXRULE_J_MAX            16
#define RXRULE_CH0_MAX          CAN0_RX_RULE_NUM
#define RXRULE_CH1_MAX          CAN1_RX_RULE_NUM
#define TX_TRFIFO_INDEX(ch)     (ch * TRFIFO_NUM_PER_CH)
#define RX_TRFIFO_INDEX(ch)     (ch * TRFIFO_NUM_PER_CH) + 1
#define NSS_MAX                 1
#define NTSEG1_MAX              128
#define NTSEG2_MAX              32
#define N_TOTAL_TQMAX           (NSS_MAX + NTSEG1_MAX + NTSEG2_MAX)
#define N_TOTAL_TQMIN           8
#define N_SAMPLE_POINT          0.666666667
#define N_SJW                   3
#define N_BITRATE_DEFAULT       100000
#define N_BITRATE_MAX           1000000
#define DSS_MAX                 1
#define DTSEG1_MAX              16
#define DTSEG2_MAX              8
#define D_TOTAL_TQMAX           (DSS_MAX + DTSEG1_MAX + DTSEG2_MAX)
#define D_TOTAL_TQMIN           8
#define D_SAMPLE_POINT          0.666666667
#define D_SJW                   3
#define D_CH0_BITRATE           2000000

void can_irq_free(can_t *obj)
{
    can_irq_id[obj->ch] = 0;
    *g_regtbl_cfcc[obj->ch][CAN_RX] &= ~CFCC_CFRXIE;
    *g_regtbl_cfcc[obj->ch][CAN_TX] &= ~CFCC_CFTXIE;
    *g_regtbl_ctr[obj->ch] &= ~(CTR_EWIE | CTR_OLIE | CTR_EPIE | CTR_ALIE | CTR_BEIE);
    if (CH_0 == obj->ch) {
        GIC_DisableIRQ(CFRXI0_IRQn);
        GIC_DisableIRQ(CTXI0_IRQn);
        GIC_DisableIRQ(CERI0_IRQn);
    } else {
        GIC_DisableIRQ(CFRXI1_IRQn);
        GIC_DisableIRQ(CTXI1_IRQn);
        GIC_DisableIRQ(CERI1_IRQn);
    }
}

void can_irq_set(can_t *obj, CanIrqType type, uint32_t enable)
{
    switch (type) {
        case IRQ_RX:
            if (enable) {
                *g_regtbl_cfcc[obj->ch][CAN_RX] |= CFCC_CFRXIE;
            } else {
                *g_regtbl_cfcc[obj->ch][CAN_RX] &= ~CFCC_CFRXIE;
            }
            break;
        case IRQ_TX:
            if (enable) {
                *g_regtbl_cfcc[obj->ch][CAN_TX] |= CFCC_CFTXIE;
            } else {
                *g_regtbl_cfcc[obj->ch][CAN_TX] &= ~CFCC_CFTXIE;
            }
            break;
        case IRQ_ERROR:
        case IRQ_OVERRUN:
        case IRQ_PASSIVE:
        case IRQ_ARB:
        case IRQ_BUS:
            if (enable) {
                *g_regtbl_ctr[obj->ch] |= irq_enable_flag_tbl[type];
            } else {
                *g_regtbl_ctr[obj->ch] &= ~irq_enable_flag_tbl[type];
            }
            break;
        case IRQ_WAKEUP:
        /* not supported */
        /* fall through */
        default:
            return;
    }
    if (enable) {
        InterruptHandlerRegister(irq_tbl[obj->ch][type].id, irq_tbl[obj->ch][type].handler);
        GIC_SetPriority(irq_tbl[obj->ch][type].id, 20);
        GIC_EnableIRQ(irq_tbl[obj->ch][type].id);
        GIC_SetConfiguration(irq_tbl[obj->ch][type].id, 1);
    } else {
        GIC_DisableIRQ(irq_tbl[obj->ch][type].id);
    }
}

void can_init(can_t *obj, PinName rd, PinName td)
{
    /* set default frequency */
    can_init_freq(obj, rd, td, N_BITRATE_DEFAULT);
}

void can_free(can_t *obj)
{
    /* disable CANFD clock */
    CPG.STBCR3.BYTE |= CPG_STBCR3_MSTP32;
}

int can_frequency(can_t *obj, int f)
{
    int retval = 0;

    /* less than normal bitrate */
    if (f <= N_BITRATE_MAX) {
        /* set normal bit rate */
        R_CAN_Control(obj->ch, CHANNEL_RESET);
        g_normal_bitrate[obj->ch] = f;
        set_normal_bitrate(obj->ch, g_normal_bitrate[obj->ch]);
        reconfigure_channel(obj->ch);
        retval = 1;
    }
    return retval;
}

int can_write(can_t *obj, CAN_Message msg, int cc)
{
    can_frame_t frame;

    /* CAN frame */
    frame.ID    = msg.id;       // Message ID
    frame.THDSE = 0;
    frame.RTR   = msg.type;     // 0:CANData, 1:CANRemote
    frame.IDE   = msg.format;   // 0:Standard ID, 1:Extend ID
    frame.LBL   = 0;
    frame.DLC   = msg.len;      // Data length
    frame.FDSTS = 1;
    frame.BRS   = 1;
    frame.ESI   = 0;

    if (R_CAN_OK != R_CAN_TxSet(TX_TRFIFO, TX_TRFIFO_INDEX(obj->ch), &frame, (uint32_t *)&msg.data[0])) {
        return 0;
    }
    if (R_CAN_OK != R_CAN_Tx(TX_TRFIFO, TX_TRFIFO_INDEX(obj->ch), ENABLE)) {
        return 0;
    }
    return 1;
}

int can_read(can_t *obj, CAN_Message *msg, int handle)
{
    uint32_t  page_index = 0;
    uint8_t   received_msg_num = 0;
    uint8_t   msg_cnt;

    if (R_CAN_OK != R_CAN_RxPoll(RX_TRFIFO, RX_TRFIFO_INDEX(obj->ch))) {
        return 0;
    }
    if (R_CAN_OK != R_CAN_RxRead(RX_TRFIFO, RX_TRFIFO_INDEX(obj->ch), (uint32_t *)&rx_buf[0])) {
        return 0;
    }

    /* number of received message */
    received_msg_num = rx_buf[0];

    for (msg_cnt = 0; msg_cnt < received_msg_num; msg_cnt++) {
        page_index = msg_cnt * 19;
        /* IDE 0:Standard ID, 1:Extend ID */
        msg->format = (CANFormat)(rx_buf[page_index + 1] >> 31);
        /* RTR/RRS : Data or Remote */
        msg->type = (CANType)((rx_buf[page_index + 1] >> 30) & 0x1);
        /* ID : Standard ID(b10-b0), Extend ID(b28-b0) */
        msg->id = (rx_buf[page_index + 1] & 0x1FFFFFFF);
        /* data Length */
        msg->len = dlc_to_length[(uint8_t)(rx_buf[page_index + 2] >> 28)];
        /* received data */
        msg->data[0] = (uint8_t)(rx_buf[page_index + 4] & 0x000000FF);
        msg->data[1] = (uint8_t)(rx_buf[page_index + 4] >> 8)  & 0x000000FF;
        msg->data[2] = (uint8_t)(rx_buf[page_index + 4] >> 16) & 0x000000FF;
        msg->data[3] = (uint8_t)(rx_buf[page_index + 4] >> 24) & 0x000000FF;
        msg->data[4] = (uint8_t)(rx_buf[page_index + 5] & 0x000000FF);
        msg->data[5] = (uint8_t)(rx_buf[page_index + 5] >> 8)  & 0x000000FF;
        msg->data[6] = (uint8_t)(rx_buf[page_index + 5] >> 16) & 0x000000FF;
        msg->data[7] = (uint8_t)(rx_buf[page_index + 5] >> 24) & 0x000000FF;
    }

    return 1; /* message arrived */
}

int can_mode(can_t *obj, CanMode mode)
{
    int retval = 1;
    switch (mode) {
        case MODE_RESET:
            /* set to reset mode */
            R_CAN_Control(UNUSED, GLOBAL_RESET);
            R_CAN_Control(obj->ch, CHANNEL_RESET);
            break;
        case MODE_NORMAL:
            /* disable test mode */
            set_test_mode(obj->ch, STD_TEST, TEST_DISABLE);
            reconfigure_channel(obj->ch);
            break;
        case MODE_SILENT:
            /* enable listen only mode */
            set_test_mode(obj->ch, TEST_LISTEN_ONLY, TEST_ENABLE);
            reconfigure_channel(obj->ch);
            break;
        case MODE_TEST_LOCAL:
            /* enable self test mode 0 */
            set_test_mode(obj->ch, EXT_LOOPBACK, TEST_ENABLE);
            reconfigure_channel(obj->ch);
            break;
        case MODE_TEST_GLOBAL:
            /* enable Inter-Channel Communication Test */
            R_CAN_Control(UNUSED, GLOBAL_TEST);
            REG_32W(&RCANFD.RSCFD0CFDGTSTCFG.LONG, TEST_ENABLE, GTSTCFG_C0ICBCE_SHIFT, GTSTCFG_C0ICBCE);
            REG_32W(&RCANFD.RSCFD0CFDGTSTCFG.LONG, TEST_ENABLE, GTSTCFG_C1ICBCE_SHIFT, GTSTCFG_C1ICBCE);
            REG_32W(&RCANFD.RSCFD0CFDGTSTCTR.LONG, TEST_ENABLE, GTSTCTR_ICBCTME_SHIFT, GTSTCTR_ICBCTME);
            /* enable standard test */
            set_test_mode(CH_0, STD_TEST, TEST_ENABLE);
            set_test_mode(CH_1, STD_TEST, TEST_ENABLE);
            reconfigure_channel(CH_0);
            reconfigure_channel(CH_1);
            break;
        case MODE_TEST_SILENT:
            /* enable self test mode 1 */
            set_test_mode(obj->ch, INT_LOOPBACK, TEST_ENABLE);
            reconfigure_channel(obj->ch);
            break;
        default:
            retval = 0;
            break;
    }
    return retval;
}

int can_filter(can_t *obj, uint32_t id, uint32_t mask, CANFormat format, int32_t handle)
{
    uint8_t page_index;
    uint8_t j_index;

    if ((CH_0 == obj->ch) && (handle >= CAN0_RX_RULE_NUM)) {
        return 0;
    }
    if ((CH_1 == obj->ch) && (handle >= CAN1_RX_RULE_NUM)) {
        return 0;
    }

    /* set to reset mode */
    R_CAN_Control(UNUSED, GLOBAL_RESET);
    R_CAN_Control(obj->ch, CHANNEL_RESET);

    /* write enable (RSCFD0CFDGAFLECTR.AFLDAE) */
    RCANFD.RSCFD0CFDGAFLECTR.LONG |= RCANFD_RSCFD0CFDGAFLECTR_AFLDAE;

    /* set page number */
    get_rxrule_index(obj->ch, handle, &page_index, &j_index);
    REG_32W(&RCANFD.RSCFD0CFDGAFLECTR.LONG, page_index, REG_NONSHIFT, 0x0000001F);

    /* set CAN format */
    REG_32W(g_regtbl_gaflid[j_index], format, 31, 0x80000000);
    if (CANExtended == format) {
        REG_32W(g_regtbl_gaflid[j_index], (id & 0x1FFFFFFF), REG_NONSHIFT, 0x1FFFFFFF);
    } else {
        REG_32W(g_regtbl_gaflid[j_index], (id & 0x000007FF), REG_NONSHIFT, 0x000007FF);
    }

    /* set masks(IDE, RTR, ID) */
    if (CANAny == format) {
        /* no masks */
        REG_32W(g_regtbl_gaflm[j_index], 0, REG_NONSHIFT, REG_NONMASK);
    } else {
        /* IDE and ID */
        REG_32W(g_regtbl_gaflm[j_index], (0x80000000 | mask), REG_NONSHIFT, REG_NONMASK);
    }
    /* set GAFLFDP1_j.GAFLFDP */
    if (CH_0 == obj->ch) {
        REG_32W(g_regtbl_gaflp1[j_index], 0x00000200, REG_NONSHIFT, REG_NONMASK); // CH0:use TRFIFO1
    } else {
        REG_32W(g_regtbl_gaflp1[j_index], 0x00001000, REG_NONSHIFT, REG_NONMASK); // CH1:use TRFIFO4
    }

    /* write disable (RSCFD0CFDGAFLECTR.AFLDAE) */
    RCANFD.RSCFD0CFDGAFLECTR.LONG &= ~RCANFD_RSCFD0CFDGAFLECTR_AFLDAE;

    reconfigure_channel(obj->ch);

    return 1;
}

void can_reset(can_t *obj)
{
    R_CAN_Control(UNUSED, GLOBAL_RESET);
    R_CAN_Control(obj->ch, CHANNEL_RESET);
    reset_register(obj->ch);
    reconfigure_channel(obj->ch);
}

unsigned char can_rderror(can_t *obj)
{
    return (unsigned char)(*g_regtbl_sts[obj->ch] >> RCANFD_RSCFD0CFDC0STS_REC_SHIFT);
}

unsigned char can_tderror(can_t *obj)
{
    return (unsigned char)(*g_regtbl_sts[obj->ch] >> RCANFD_RSCFD0CFDC0STS_TEC_SHIFT);
}

void can_monitor(can_t *obj, int silent)
{
    if (silent) {
        set_test_mode(obj->ch, TEST_LISTEN_ONLY, TEST_ENABLE);
    } else {
        set_test_mode(obj->ch, STD_TEST, TEST_DISABLE);
    }
    reconfigure_channel(obj->ch);
}
